--- a/src/style/loader.css
+++ b/src/style/loader.css
@@ -9,30 +9,30 @@
     background-color: rgba(0, 0, 0);
 }
 
-.progress-bar-container {
-    position: absolute;
-    z-index: 5;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding: 5px 20px;
-    /*background: radial-gradient(50% 50.00% at 50% 50.00%, #FC762B 0%, rgba(9, 9, 9, 0.00) 100%),*/
-    /*            radial-gradient(50% 50.00% at top left, #62A744 0%, rgba(9, 9, 9, 0.00) 100%);*/
-    /*animation: gradientAnimation 1.5s ease infinite;*/
-    /*transition: background-position 1.5s ease;*/
-    /*background: radial-gradient(50% 50% at 0 100%, #FC762B 0%, rgba(9, 9, 9, 0.00) 100%),*/
-    /*            radial-gradient(50% 50% at 100% 0, #FC762B 0%, rgba(9, 9, 9, 0.00) 100%),*/
-    /*            radial-gradient(50% 50% at 0 0, #62A744 0%, rgba(9, 9, 9, 0.00) 100%),*/
-    /*            radial-gradient(50% 50% at 100% 100%, #62A744 0%, rgba(9, 9, 9, 0.00) 100%);*/
-    /*animation: gradientAnimation 1s ease-in-out infinite;*/
-    /*background-size: 100% 100%;*/
-}
+/*.progress-bar-container {*/
+/*    position: absolute;*/
+/*    z-index: 5;*/
+/*    top: 50%;*/
+/*    left: 50%;*/
+/*    transform: translate(-50%, -50%);*/
+/*    width: 100%;*/
+/*    height: 100%;*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    justify-content: center;*/
+/*    align-items: center;*/
+/*    padding: 5px 20px;*/
+/*    !*background: radial-gradient(50% 50.00% at 50% 50.00%, #FC762B 0%, rgba(9, 9, 9, 0.00) 100%),*!*/
+/*    !*            radial-gradient(50% 50.00% at top left, #62A744 0%, rgba(9, 9, 9, 0.00) 100%);*!*/
+/*    !*animation: gradientAnimation 1.5s ease infinite;*!*/
+/*    transition: background-color 5s cubic-bezier(0.8, 0, 1, 1);*/
+/*    !*background: radial-gradient(50% 50% at 0 100%, #FC762B 0%, rgba(9, 9, 9, 0.00) 100%),*!*/
+/*    !*            radial-gradient(50% 50% at 100% 0, #FC762B 0%, rgba(9, 9, 9, 0.00) 100%),*!*/
+/*    !*            radial-gradient(50% 50% at 0 0, #62A744 0%, rgba(9, 9, 9, 0.00) 100%),*!*/
+/*    !*            radial-gradient(50% 50% at 100% 100%, #62A744 0%, rgba(9, 9, 9, 0.00) 100%);*!*/
+/*    animation: gradientAnimation 5s ease-in-out infinite;*/
+/*    background-size: 100% 100%;*/
+/*}*/
 
 /*@keyframes gradientAnimation {*/
 /*    0% {*/
@@ -54,6 +54,24 @@
 /*    100% {*/
 /*        background: radial-gradient(50% 50% at 0% 100%, #62A744 -50%, rgba(9, 9, 9, 0) 100%),*/
 /*                    radial-gradient(50% 50% at 100% 0%, #62A744 -50%, rgba(9, 9, 9, 0) 100%);*/
+/*    }*/
+/*}*/
+
+/*@keyframes gradientAnimation {*/
+/*    0% {*/
+/*        background-color: blue;*/
+/*    }*/
+/*    25% {*/
+/*        background-color: white;*/
+/*    }*/
+/*    50% {*/
+/*        background-color: green;*/
+/*    }*/
+/*    75% {*/
+/*        background-color: yellow;*/
+/*    }*/
+/*    100% {*/
+/*        background-color: hotpink;*/
 /*    }*/
 /*}*/
 
@@ -107,38 +125,58 @@
 /*}*/
 
 
-/*.progress-bar-container {*/
-/*    position: absolute;*/
-/*    z-index: 5;*/
-/*    top: 50%;*/
-/*    left: 50%;*/
-/*    transform: translate(-50%, -50%);*/
-/*    width: 100%;*/
-/*    height: 100%;*/
-/*    display: flex;*/
-/*    flex-direction: column;*/
-/*    justify-content: center;*/
-/*    align-items: center;*/
-/*    padding: 5px 20px;*/
-/*    overflow: hidden;*/
-/*    background-origin: border-box;*/
-/*}*/
+.progress-bar-container {
+    position: absolute;
+    z-index: 5;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 5px 20px;
+    overflow: hidden;
+    background-origin: border-box;
+}
 
-/*.progress-bar-container::before,*/
-/*.progress-bar-container::after {*/
-/*    content: "";*/
-/*    position: absolute;*/
-/*    display: block;*/
-/*    top: 0;*/
-/*    left: 0;*/
-/*    width: 100%;*/
-/*    height: 100%;*/
-/*    background: radial-gradient(50% 50% at 0 100%, #FC762B 0%, rgba(9, 9, 9, 0.00) 100%),*/
-/*                radial-gradient(50% 50% at 100% 0, #FC762B 0%, rgba(9, 9, 9, 0.00) 100%),*/
-/*                radial-gradient(50% 50% at 0 0, #62A744 0%, rgba(9, 9, 9, 0.00) 100%),*/
-/*                radial-gradient(50% 50% at 100% 100%, #62A744 0%, rgba(9, 9, 9, 0.00) 100%);*/
-/*    animation: gradientAnimation 10s ease-in-out infinite;*/
-/*    transition: background-position 10s ease-in-out;*/
+.progress-bar-container::before,
+.progress-bar-container::after {
+    content: "";
+    position: absolute;
+    display: block;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    /*background-color: #62a744;*/
+    /*background: radial-gradient(50% 50% at 0 100%, #FC762B 0%, rgba(9, 9, 9, 0.00) 100%);*/
+    /*            radial-gradient(50% 50% at 100% 0, #FC762B 0%, rgba(9, 9, 9, 0.00) 100%),*/
+    /*            radial-gradient(50% 50% at 0 0, #62A744 0%, rgba(9, 9, 9, 0.00) 100%),*/
+    /*            radial-gradient(50% 50% at 100% 100%, #62A744 0%, rgba(9, 9, 9, 0.00) 100%);*/
+    /*animation: gradientAnimation 2s ease-in-out infinite;*/
+    /*animation: 1s ease-out 0s infinite gradientAnimation;*/
+    /*transition: background-position 2s ease-in-out;*/
+}
+
+/*@keyframes gradientAnimation {*/
+/*    0% {*/
+/*        transform: translateY(0);*/
+/*    }*/
+/*    !*25% {*!*/
+/*    !*    background-color: white;*!*/
+/*    !*}*!*/
+/*    !*50% {*!*/
+/*    !*    background-color: green;*!*/
+/*    !*}*!*/
+/*    !*75% {*!*/
+/*    !*    background-color: yellow;*!*/
+/*    !*}*!*/
+/*    100% {*/
+/*        transform: translateY(500px);*/
+/*    }*/
 /*}*/
 
 /*@keyframes gradientAnimation {*/
