--- a/src/style/style.css
+++ b/src/style/style.css
@@ -1,6 +1,7 @@
 @import '../style/base.css';
 @import "../style/loader.css";
 @import "../style/media.css";
+@import "../style/pages/404.css";
 
 /*control*/
 /*header*/
