--- a/src/style/style.css
+++ b/src/style/style.css
@@ -13,6 +13,12 @@
 /*    display: none;*/
 /*}*/
 
+#Canvas_wrapper {
+    background-color: yellow;
+    width: 100%;
+    height: 100%;
+}
+
 a-scene {
     opacity: 0;
     height: 0;
