--- a/src/style/style.css
+++ b/src/style/style.css
@@ -61,31 +61,38 @@ a-scene {
     background-color: #FF69B4;
 }
 
-.tooltip {
+.Mytext {
     display: none;
-    position: relative;
-    font-family: 'MoscowSans', sans-serif;
-    font-weight: 300;
+    max-width: 280px;
+    /*width: 100%;*/
+    height: auto;
+}
+
+.tooltip_wrapper {
+    display: flex;
     background: rgba(9, 9, 9, 0.50);
     backdrop-filter: blur(6px);
+    border-radius: 16px;
+    padding: 20px;
+    gap: 16px;
+}
+
+.tooltip {
+    font-family: 'MoscowSans', sans-serif;
+    font-size: 18px;
+    font-weight: 300;
     color: white;
-    padding: 12px 10px;
-    border-radius: 20px;
 }
 
-.tooltip:before {
-    content: 'X';
-    position: absolute;
-    top: -8px;
-    right: -10px;
-    cursor: pointer;
+.tooltip_wrapper svg {
+    min-width: min-content;
 }
 
-.tooltip.show {
+.Mytext.show {
     display: block;
 }
 
-.tooltip.hide {
+.Mytext.hide {
     display: none;
 }
 
